--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.86.0",
     "@types/animejs": "^3.1.13",
     "animate.css": "^4.1.1",
     "animejs": "^4.2.2",
